2006-09-22  Martin Hunt  <hunt@redhat.com>

	* print.c: Replace STP_PRINT_BUF_LEN with STP_BUFFER_SIZE.
	* string.c: Ditto.

2006-09-21  Martin Hunt  <hunt@redhat.com>
	PR 3232
	* print.c (_stp_print_init): New. Alloc per-cpu buffers.
	(_stp_print_cleanup): New. Free per-cpu buffers.
	(_stp_print_flush): Use per_cpu_ptr().
	* string.c (_stp_sprintf): Ditto.
	(_stp_vsprintf): Ditto.
	(_stp_string_cat_cstr): Ditto.
	(_stp_string_cat_char): Ditto.	
	

2006-09-20  Josh Stone  <joshua.i.stone@intel.com>

	PR 3233
	* time.c (stp_time_t): Use ns for the base time, and freq is now kHz.
	(__stp_estimate_cpufreq): Compute kHz instead of MHz.
	(__stp_time_timer_callback, __stp_init_time): Compute base in ns.
	(__stp_time_cpufreq_callback): Record kHz instead of MHz.
	(_stp_init_time): Record kHz, and disable preemption to avoid a race
	in the cpufreq notifier.
	(_stp_gettimeofday_ns): Converted from _stp_gettimeofday_us.

	* lket/b2a/lket_b2a.c (main): Correct arguments to fseek.
	(dump_data): Work around a spurious compiler warning.

2006-09-19  Li Guanglei <guanglei@cn.ibm.com>

	* lket/b2a/lket_b2a.c, lket/b2a/lket_b2a.h: 
	Be sync with the recent runtime printing changes made by Martin. 
	Some clean up work before adding the support of dumping data
	into MySQL
	Bug fix of segment fault when an event is not registered.
	
2006-09-18  Josh Stone  <joshua.i.stone@intel.com>

	PR 3220
	From Eugeniy Meshcheryakov <eugen@debian.org>:
	* lket/b2a/lket_b2a.c: Check that appNameTree exists before destroying.

2006-09-18  Martin Hunt  <hunt@redhat.com>

	* bench2/bench.rb: Remove the deprecated "-m" option
	to stpd. Also, don't use merge mode for relayfs.
	* bench2/run_binary_print: New test. Compare various ways of
	printing binary data.

2006-09-18  Martin Hunt  <hunt@redhat.com>
	
	* print.c (_stp_print_flush): Rewrite so one version works for
	relayfs or procfs. Use proper per-cpu functions.
	(_stp_reserve_bytes): New function. Reserve bytes in the output buffer.