@@ -1,3 +1,8 @@
+2006-09-26  Martin Hunt  <hunt@redhat.com>
+
+	* io.c (_stp_vlog): Remove ifdef for STP_RELAYFS. Relayfs now
+	behaves the same as procfs.
+
 2006-09-22  Martin Hunt  <hunt@redhat.com>
 
 	* print.c: Replace STP_PRINT_BUF_LEN with STP_BUFFER_SIZE.
